--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -1,7 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+/* @import "./custom-base-styles.css"; */
 
+@import "tailwindcss/components";
+/* @import "./custom-components.css"; */
+
+@import "tailwindcss/utilities";
+/* @import "./custom-utilities.css"; */
 /*
 blockquote {
   font-family: monospace;
